- Fix for category menu wrapping on small widths without a background.

--- a/templates/bootstrap/css/style.css
+++ b/templates/bootstrap/css/style.css
@@ -157,7 +157,7 @@ filter:alpha(opacity=40);
     background-repeat: repeat-x;
     border: solid #E5E5E5;
 	border-width: 1px 0;
-    height: 36px;
+    height: auto;
     width: 100%;
 }
 .subnav .nav {
